2 этап(iter 52)